@@ -10,6 +10,7 @@ TGUI 0.8.9  (TBD)
 - Tabs::remove didn't recalculate the tabs width
 - SubwidgetContainer wasn't being compiled into the library
 - Text orientation in Button wasn't updated when size changed
+- Text position in EditBox didn't update when increasing width if text didn't fit before
 
 
 TGUI 0.8.8  (20 June 2020)
